progress on event structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,88 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sidr/2.2.1/stylesheets/jquery.sidr.dark.min.css">
-    <link rel="stylesheet" href="assets/css/default.css">
 </head>
 <body>
 
-
-
-
-<header></header>
-<main></main>
-<footer></footer>
-
-<script id="tmpl-header" type="text/html">
-    <div id="sidr">
-        <ul>
-            <li><a href="#!/">Home</a></li>
-            <li><a href="#!/event-list/">Event List</a></li>
-            <li><a href="#!/event-detail/">Event Detail</a></li>
-            <li><a href="#!/event-create/">Event Create</a></li>
-
-            <% if (signedIn) { %>
-                <li><a href="" id="signout">Log Out</a></li>
-            <% } %>
-        </ul>
-    </div>
-    <div class="table">
-        <div class="table-cell">
-            <a id="hamburger" href="#sidr">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </a>
-        </div>
-    </div>
-</script>
-
-<script id="tmpl-home" type="text/html">
-    <p>Home</p>
-</script>
-
-<script id="tmpl-section" type="text/html">
-    <p>Section</p>
-    <p><%= section %></p>
-</script>
-
-<script id="tmpl-signin" type="text/html">
-    <p>Sign In</p>
-</script>
-
-<script id="tmpl-event-list" type="text/html">
-    <p>Event List</p>
-    <p><%= data %></p>
-</script>
-
-<script id="tmpl-event-detail" type="text/html">
-    <p>Event Detail</p>
-    <p><%= data %></p>
-</script>
-
-<script id="tmpl-event-create" type="text/html">
-    <p>Event Create</p>
-    <p><%= data %></p>
-</script>
-
-<script id="tmpl-footer" type="text/html">
-    <p>&copy;<%= year %></p>
-</script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.underscore.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sidr/2.2.1/jquery.sidr.min.js"></script>
-
-<script src="assets/js/utils.js"></script>
-<script src="assets/js/header-view.js"></script>
-<script src="assets/js/footer-view.js"></script>
-<script src="assets/js/home-view.js"></script>
-<script src="assets/js/event-list-view.js"></script>
-<script src="assets/js/event-detail-view.js"></script>
-<script src="assets/js/event-create-view.js"></script>
-<script src="assets/js/router.js"></script>
-
+<a href="/signin/">Sign In</a>
 </body>
 </html>
