style landing and signin pages

--- a/public/signin/index.html
+++ b/public/signin/index.html
@@ -4,10 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title></title>
-    <link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.css" />
+    <link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.css">
+    <link rel="stylesheet" href="/assets/css/default.css">
+    <link rel="stylesheet" href="/assets/css/signin.css">
 </head>
-<body>
+<body class="signin">
 
+<div class="signin__logo"></div>
 
 <div id="firebaseui-auth-container"></div>
 
