--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title></title>
+    <link rel="stylesheet" href="/assets/css/default.css">
+    <link rel="stylesheet" href="/assets/css/land.css">
 </head>
-<body>
+<body class="land">
 
-<a href="/signin/">Sign In</a>
+    <a href="/signin/" class="land__sign-up">Sign Up</a>
+
+    <div class="land__logo"></div>
+
+    <a href="/signin/" class="land__sign-in"></a>
+
 </body>
 </html>
