--- a/public/app/index.html
+++ b/public/app/index.html
@@ -40,28 +40,24 @@
 </script>
 
 <script id="tmpl-account" type="text/html">
-    <p>Account</p>
+    <p>Edit Account</p>
 
-    <form id="foo">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputFile">File input</label>
-        <input type="file" id="exampleInputFile">
-        <p class="help-block">Example block-level help text here.</p>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Check me out
-        </label>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+    <form id="account-edit">
+        <div class="form-group">
+            <label for="displayName">Display Name</label>
+            <input type="text" class="form-control" id="displayName" value="<%= currentUser.displayName %>">
+        </div>
+
+        <hr>
+
+        <div class="form-group">
+            <label for="exampleInputFile">Profile Image</label><br>
+            <img src="<%= currentUser.photoURL %>" class="img-circle" id="currentPhoto"><br>
+
+            <input type="file" id="imageFileInput">
+        </div>
+
+      <button type="submit" class="btn btn-default">Save</button>
     </form>
 </script>
 
@@ -108,7 +104,7 @@
 </script>
 
 <script id="tmpl-footer" type="text/html">
-    <p>&copy;<%= year %></p>
+    <!-- <p>&copy;<%= year %></p> -->
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
