--- a/scraps/place-details.html
+++ b/scraps/place-details.html
@@ -50,7 +50,8 @@
 
     function initMap() {
       var request = {
-        placeId: 'ChIJ4dG5s4K3wogRY7SWr4kTX6c'
+        // placeId: 'ChIJ4dG5s4K3wogRY7SWr4kTX6c'
+        placeId: 'ChIJy39kyKRzhlQREHtp2CnhOAE'
       };
 
       function callback(place, status) {
