--- a/scraps/place-id-finder-click.html
+++ b/scraps/place-id-finder-click.html
@@ -94,7 +94,7 @@
           marker.setVisible(true);
 
           infowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
-            //   'Place ID: ' + place.place_id + '<br>' +
+                'Place ID: ' + place.place_id + '<br>' +
               place.formatted_address);
           infowindow.open(map, marker);
         });
