--- a/scraps/place-id-finder-autocomplete.html
+++ b/scraps/place-id-finder-autocomplete.html
@@ -95,7 +95,8 @@
             if (status === google.maps.GeocoderStatus.OK) {
               if (results[0]) {
 
-                alert('place id: ' + results[0].place_id);
+                 console.log(results[0])
+                console.log('place id: ' + results[0].place_id);
 
 
               } else {
